--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "description": "",
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^17.0.1",
     "express": "^4.21.1",
     "express-rate-limit": "^7.4.1",
     "firebase-admin": "^12.6.0",
